--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   </head>
   <body>
     <h1>YAKOYO RESTAURANTS AND BAR</h1>
+    <p>
+      Yaokoyo Restaurants and Bar offers a vibrant fusion of flavors and
+      ambiance, inviting patrons to indulge in an unforgettable dining
+      experience. Nestled in the heart of the city, Yaokoyo exudes warmth and
+      sophistication, seamlessly blending contemporary design with cultural
+      influences. Our diverse menu celebrates culinary traditions from around
+      the world, expertly crafted to tantalize the taste buds of discerning
+      diners. From savory appetizers to delectable mains and innovative
+      cocktails, each dish at Yaokoyo is a masterpiece, meticulously prepared
+      using the freshest ingredients and inspired culinary techniques. Whether
+      you're seeking a romantic evening out, a lively gathering with friends, or
+      a memorable dining experience, Yaokoyo Restaurants and Bar promises an
+      atmosphere of elegance, excitement, and unparalleled gastronomic delights.
+    </p>
     <dl>
       <dt><strong>FOOD MENU</strong></dt>
       <dd>
@@ -26,7 +40,7 @@
                 height="80px"
               />
             </td>
-            <td>Amala with ewedu and pepper, cow meat and pomo</td>
+            <td><a href="amala.html">Amala with ewedu and pepper, cow meat and pomo</a></td>
             <td>
               <p>old price: <s>2,500</s></p>
               <p>new price: <b>3,500</b></p>
@@ -42,7 +56,7 @@
                 height="80px"
               />
             </td>
-            <td>Fried rice and roaster/fried chicken</td>
+            <td><a href="fried.html">Fried rice and roaster/fried chicken</a></td>
             <td>
               <p>old price: <s>4,500</s></p>
               <p>new price: <b>5,500</b></p>
@@ -58,7 +72,7 @@
                 height="80px"
               />
             </td>
-            <td>Delicious Yam Porridge</td>
+            <td><a href="yam.html">Delicious Yam Porridge</a></td>
             <td>
               <p>old price: <s>2,500</s></p>
               <p>new price: <b>4,500</b></p>
@@ -74,7 +88,7 @@
                 height="80px"
               />
             </td>
-            <td>Spaghetti Bolognese</td>
+            <td><a href="spag.html">Spaghetti Bolognese</a></td>
             <td>
               <p>old price: <s>3,500</s></p>
               <p>new price: <b>5,000</b></p>
@@ -102,7 +116,7 @@
                 height="80px"
               />
             </td>
-            <td>Pina Colada</td>
+            <td><a href="pina.html">Pina Colada</a></td>
             <td>
               <p>old price: <s>3,500</s></p>
               <p>new price: <b>5,500</b></p>
@@ -119,7 +133,7 @@
                 height="80px"
               />
             </td>
-            <td>Martini</td>
+            <td><a href="martini.html">Martini</a></td>
             <td>
               <p>old price: <s>5,500</s></p>
               <p>new price: <b>7,500</b></p>
@@ -136,7 +150,7 @@
                 height="80px"
               />
             </td>
-            <td>Mojito</td>
+            <td><a href="mojito.html">Mojito</a></td>
             <td>
               <p>old price: <s>4,500</s></p>
               <p>new price: <b>10,500</b></p>
